# lda-berita-indo

./: pyproject.toml
data/: detik_dec.csv  kompas_dec.csv  okezone_dec.csv  sindonews_dec.csv  tempo_dec.csv  tribunnews_dec.csv
scrape/: settings.py
scrape/spiders/: __init__.py
