[tool.poetry]
name = "lda-berita-indo"
version = "0.1.0"
description = ""
authors = ["ahmaddynugroho <ahmaddwi700@gmail.com>"]
readme = "README.md"
packages = [{include = "lda_berita_indo"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
