[tool.poetry]
name = "lda-berita-indo"
version = "0.1.0"
description = ""
authors = ["ahmaddynugroho <ahmaddwi700@gmail.com>"]
readme = "README.md"
packages = [{include = "lda_berita_indo"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
scrapy = "^2.7.1"
pandas = "^1.5.3"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
