[tool.pyright]
include = ["scrape", "utils", "notebook"]
exclude = ["**/node_modules",
    "**/__pycache__",
    "src/experimental"
]
venvPath = "."
venv = ".venv"

[tool.poetry]
name = "lda-berita-indo"
version = "0.1.0"
description = ""
authors = ["ahmaddynugroho <ahmaddwi700@gmail.com>"]
readme = "README.md"
packages = [{include = "lda_berita_indo"}]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.21.0"
pysastrawi = "^1.2.0"
pyarrow = "^11.0.0"


[tool.poetry.group.dev.dependencies]
scrapy = "^2.7.1"
pandas = "^1.5.3"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

